cabal-version: 1.12

name:           recht
version:        0.1.0
build-type:     Simple

executable recht
  main-is: Main.hs
  other-modules:
      Paths_recht
  ghc-options: -threaded
  build-depends:
      base
    , async
    , blessings
    , data-default
    , optparse-generic
    , pandoc
    , random
    , regex-tdfa
    , safe
    , scalpel
    , text
  default-language: Haskell2010
