cabal-version: 1.12

name:           recht
version:        0.1.0
build-type:     Simple

executable recht
  main-is: Main.hs
  other-modules:
      Paths_recht
  ghc-options: -threaded -Wall
  build-depends:
      base
    , async
    , blessings
    , binary
    , bytestring
    , data-default
    , directory
    , filepath
    , optparse-applicative
    , pandoc
    , random
    , safe
    , scalpel
    , text
  default-language: Haskell2010
