cabal-version: >=1.12

name: recht
version: 0.3.0
build-type: Simple
license: MIT
author: Kierán Meinhardt <kmein@posteo.de>

executable recht
  hs-source-dirs: src
  main-is: Main.hs
  other-modules: Recht.Cache, Recht.Types, Recht.Options, Recht.Util, Recht.Scraper, Recht.Render
  ghc-options: -O2 -threaded -Wall
  build-depends:
      base
    , ansi-terminal
    , async
    , binary
    , bytestring
    , data-default
    , directory
    , filepath
    , megaparsec
    , optparse-applicative
    , pandoc
    , random
    , safe
    , scalpel
    , text
    , time
  default-language: Haskell2010
